fix: fix planet large width on mobile

--- a/src/widgets/preloader/preloader.module.scss
+++ b/src/widgets/preloader/preloader.module.scss
@@ -16,7 +16,7 @@
 
   &__animation {
     margin-bottom: 20px;
-    max-width: 800px;
+
     margin: 0 auto;
   }
 
@@ -28,11 +28,21 @@
     margin-bottom: 35px;
   }
 
+  &__progressbar-wrapper {
+    position: absolute;
+    left: 50%;
+    bottom: 100px;
+    width: 85%;
+    height: 1px;
+    transform: translate(-50%);
+  }
+
   &__progressbar {
     width: 100%;
     height: 1px;
     background-color: var(--greyscale-11);
   }
+
   @include desktop-m {
     &__animation {
       max-width: 1000px;
